# alice

./: CMakeLists.txt  README.md
cmake/: alice.cmake
modules/core/: CMakeLists.txt
modules/game-socket/: CMakeLists.txt
modules/lele/: CMakeLists.txt  object.h
modules/program/: CMakeLists.txt
programs/: CMakeLists.txt
programs/code/: CMakeLists.txt  alice_subsystem_platform.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  main.cpp  object_im_gui.h
programs/game-framework-test/: CMakeLists.txt
projects/code/: CMakeLists.txt
projects/code/modules/assimp/: CMakeLists.txt
projects/code/modules/glad/: CMakeLists.txt
projects/code/modules/glad/include/glad/: glad.h
projects/code/modules/glad/src/: glad.c
projects/code/modules/glfw-3.3.8/include/GLFW/: glfw3.h
projects/code/modules/glm/include/glm/detail/: type_quat.hpp
projects/code/modules/glm/include/glm/ext/: scalar_ulp.inl
projects/code/modules/glm/include/glm/gtx/: io.hpp
projects/code/modules/imgui/: CMakeLists.txt
projects/code/modules/imgui/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
projects/code/src/: camera.h  engine.cpp  entity.h  main.cpp  mesh_reader.h  render_object.h  shader.cpp
projects/code/src/entities/: mesh.h  transform.h
projects/code/src/render_objects/: editor_grids_render_object.h  mesh_render_object.h  skybox_render_object.cpp  skybox_render_object.h  triangle_render_object.cpp  triangle_render_object.h
projects/code/src/shader/: editor_grids_shader.h  mesh_shader.cpp  skybox_shader.cpp  skybox_shader.h
projects/code/src/textures/: cube_map.h
sources/: CMakeLists.txt
sources/SDL3-3.1.2/: CMakeLists.txt
sources/SDL3-3.1.2/lib/apple/: libSDL3.0.dylib
sources/core/: CMakeLists.txt
sources/game-framework/: CMakeLists.txt  space.h
sources/game-renderer/: CMakeLists.txt
src/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_internal.h  imgui_widgets.cpp
src/imgui/imgui/: imconfig.h  imgui_draw.cpp  imgui_tables.cpp
src/imgui/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
src/imgui/opengl/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/imgui/vulkan/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/renderer/: CMakeLists.txt  camera.h  component.cpp  component.h  component_factory.h  engine.cpp  engine.h  entity.h  imgui_render_object.cpp  imgui_render_object.h  main.cpp  mesh.h  object_list.h  platform.cpp  platform.h  renderer.cpp  renderer.h  shader.cpp  shader.h  singleton.h  triangle_render_object.cpp  triangle_shader.cpp  window.h
src/renderer/assets/: mesh.fbx
src/renderer/components/: mesh_component.cpp  mesh_component.h  transform_component.cpp  transform_component.h
src/renderer/entities/: mesh.h  transform.h
src/renderer/render_objects/: editor_grids_render_object.cpp  mesh_render_object.cpp  mesh_render_object.h  skybox_render_object.cpp  skybox_render_object.h  triangle_render_object.cpp
src/renderer/shader/: editor_grids_shader.cpp  mesh_shader.h  skybox_shader.cpp  skybox_shader.h  triangle_shader.cpp  triangle_shader.h
src/renderer/textures/: cube_map.cpp
(+30 files in other folders)
